# ChangeLog for dev-ruby/ruby-gettext
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gettext/ChangeLog,v 1.31 2007/04/14 06:18:57 graaff Exp $

  14 Apr 2007; Hans de Graaff <graaff@gentoo.org>
  -ruby-gettext-0.8.0.ebuild:
  Remove old version.

  25 Mar 2007; Raúl Porcel <armin76@gentoo.org> ruby-gettext-1.8.0.ebuild:
  ia64 stable wrt bug 148322

  11 Feb 2007; Lars Weiler <pylon@gentoo.org> ruby-gettext-1.8.0.ebuild:
  Stable on ppc; bug #148322.

  10 Feb 2007; Steve Dibb <beandog@gentoo.org> ruby-gettext-1.8.0.ebuild:
  amd64 stable, bug 148322

  09 Feb 2007; Christian Faulhammer <opfer@gentoo.org>
  ruby-gettext-1.8.0.ebuild:
  stable x86; bug #148322

  09 Feb 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  ruby-gettext-1.8.0.ebuild:
  Stable on sparc wrt #148322

*ruby-gettext-1.9.0 (09 Feb 2007)

  09 Feb 2007; Hans de Graaff <graaff@gentoo.org>
  -ruby-gettext-1.6.0.ebuild, -ruby-gettext-1.7.0.ebuild,
  +ruby-gettext-1.9.0.ebuild:
  Version bump. Update homepage. Remove old versions.

  21 Jan 2007; Nguyễn Thái Ngọc Duy <pclouds@gentoo.org>
  ruby-gettext-0.8.0.ebuild:
  Added examples use flag to ebuild, #145222

  22 Sep 2006; <blubb@gentoo.org> ruby-gettext-0.8.0.ebuild:
  stable on amd64

  12 Sep 2006; Diego Pettenò <flameeyes@gentoo.org>
  files/digest-ruby-gettext-1.8.0, Manifest:
  Update digest.

*ruby-gettext-1.8.0 (11 Sep 2006)

  11 Sep 2006; Diego Pettenò <flameeyes@gentoo.org>
  +ruby-gettext-1.8.0.ebuild:
  Version bump.

  19 Jul 2006; Diego Pettenò <flameeyes@gentoo.org>
  files/digest-ruby-gettext-1.7.0, Manifest:
  Redigest, upstream changed the tarball.

*ruby-gettext-1.7.0 (16 Jul 2006)

  16 Jul 2006; Diego Pettenò <flameeyes@gentoo.org>
  +ruby-gettext-1.7.0.ebuild:
  Version bump.

*ruby-gettext-1.6.0 (08 Jun 2006)

  08 Jun 2006; Diego Pettenò <flameeyes@gentoo.org>
  -ruby-gettext-1.0.0.ebuild, -ruby-gettext-1.4.0.ebuild,