@@ -1,5 +1,13 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+DIST gettext-1.10.0.gem 346112 RMD160 2d4050c94307e12e4fba326fb7b330d8e8fbf7dc SHA1 15950d57465a05e68a2b80e9d2f13d8e3ceaa432 SHA256 005f265b41e7357a7968d7cd651e6785a00e363799ef2d645a76695742899b51
 DIST gettext-1.8.0.gem 231424 RMD160 ca309aac013c80e53c75edc25aab139ea8ca7a19 SHA1 e21c7bb99e8c2f69a786d92c82615142a902a2eb SHA256 2c718338cf68941966a4338461f61f28424011f8962eaa4716684fbfee53dbc0
 DIST gettext-1.9.0.gem 245760 RMD160 d834abc5f13c5a13d71b0ad7a40b9a4484e1d92a SHA1 b9215c7e850091338b219398297d6c084df68724 SHA256 281f381b6d0aefae116e3263d7d0e1170bc2861b917cc9d964c6838d31d38e23
+EBUILD ruby-gettext-1.10.0.ebuild 710 RMD160 71b0f6645386283b9ed6ed2d7394b61738a15c8a SHA1 c9707deb0a66f1fe78665b163e9fb8bef5019219 SHA256 653f056297ed3d5fa383208a957d95df7b1401c13df5808c41294a816aee8e4c
+MD5 4cf2174d786964c0b26be95716a96b2b ruby-gettext-1.10.0.ebuild 710
+RMD160 71b0f6645386283b9ed6ed2d7394b61738a15c8a ruby-gettext-1.10.0.ebuild 710
+SHA256 653f056297ed3d5fa383208a957d95df7b1401c13df5808c41294a816aee8e4c ruby-gettext-1.10.0.ebuild 710
 EBUILD ruby-gettext-1.8.0.ebuild 761 RMD160 1b068a4e60341c6bbc1ebe5eb1e44f3e89f59082 SHA1 622b0cc92e1890d9750cf09208ec7bfcca707a39 SHA256 78973a153511b81e05114f344cf308e8f6bfc0615f739818b7c921ce848fb7a2
 MD5 e925cac7adcd63349d2cfc8eb2021103 ruby-gettext-1.8.0.ebuild 761
 RMD160 1b068a4e60341c6bbc1ebe5eb1e44f3e89f59082 ruby-gettext-1.8.0.ebuild 761
@@ -8,17 +16,27 @@ EBUILD ruby-gettext-1.9.0.ebuild 768 RMD160 ae0f0b11a02b3baa6f0d8b3e0da8ffa94e65
 MD5 b8ccf0f6a22e70d8b6454a233eefd7b9 ruby-gettext-1.9.0.ebuild 768
 RMD160 ae0f0b11a02b3baa6f0d8b3e0da8ffa94e65774a ruby-gettext-1.9.0.ebuild 768
 SHA256 694c00dbf651df58c151da7edc144d9b5b36bb3eb710d98e705f42b0f589df58 ruby-gettext-1.9.0.ebuild 768
-MISC ChangeLog 4402 RMD160 dcfefb5b2cce19ada33465134fa68e9e9be72020 SHA1 7671668c881277e18b2232a82ee4bad89362961e SHA256 c316f10827236ffb8884b7c67abd98f5f08a7518fe189ec7a5e7cc1812bc36e6
-MD5 626c1e085832c059bf4312bdba5f4d54 ChangeLog 4402
-RMD160 dcfefb5b2cce19ada33465134fa68e9e9be72020 ChangeLog 4402
-SHA256 c316f10827236ffb8884b7c67abd98f5f08a7518fe189ec7a5e7cc1812bc36e6 ChangeLog 4402
+MISC ChangeLog 4598 RMD160 71e5877cef52beaff5b4bf5f49aed4105a5f4a84 SHA1 f0804cd030c65f3bdc82facdb6bdb4b55797ab56 SHA256 d4048a84aaaad6ac6fd026216a3749188a3066d32834270e4cf6a7dbdf2bba83
+MD5 2254d2ab96ce331881287c84aa2ec658 ChangeLog 4598
+RMD160 71e5877cef52beaff5b4bf5f49aed4105a5f4a84 ChangeLog 4598
+SHA256 d4048a84aaaad6ac6fd026216a3749188a3066d32834270e4cf6a7dbdf2bba83 ChangeLog 4598
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
 MD5 3eec9f3fe48b51f49dbc1f171a3b026f metadata.xml 157
 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 metadata.xml 157
 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c metadata.xml 157
+MD5 29763fa82f71e44a7680a899cf806f48 files/digest-ruby-gettext-1.10.0 235
+RMD160 569fd71fa27ee5be8216d849e22cd5f051ac19f6 files/digest-ruby-gettext-1.10.0 235
+SHA256 9957bf30dc0d9129fcc9bc4bca544953a7dfe2397c6002738c97813716ac53a7 files/digest-ruby-gettext-1.10.0 235
 MD5 c4ccc232d22815b4c62a39a30e181789 files/digest-ruby-gettext-1.8.0 232
 RMD160 cd732b8a0de1b56e48e8c030a09a19dbbf56186a files/digest-ruby-gettext-1.8.0 232
 SHA256 5cdf4c1162f38f61da4bc32a8863fb3efcd1c817506464f31846dffb905e4c61 files/digest-ruby-gettext-1.8.0 232
 MD5 562ebbb51be0a9cc40ea11974c7580bb files/digest-ruby-gettext-1.9.0 232
 RMD160 07c9c80a784bdadc51ae8de62c954a997f0826b1 files/digest-ruby-gettext-1.9.0 232
 SHA256 df0ff346d507e7111e4d6032f1352aefabb0c0f8efcc50b6490b8ca4e9e1475d files/digest-ruby-gettext-1.9.0 232
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.7 (GNU/Linux)
+
+iD8DBQFGmHvF0BM77Tkv120RArLwAJ9nIaeBRFRDbOep4TXm0w2+PII1gACfZiSc
+jk7R6xLveHc6vrU1T4sOQ2k=
+=kdn8
+-----END PGP SIGNATURE-----
