@@ -1,0 +1,3 @@
+MD5 1a07f3d4117743b925cf5974d1e3ccf3 gettext-1.10.0.gem 346112
+RMD160 2d4050c94307e12e4fba326fb7b330d8e8fbf7dc gettext-1.10.0.gem 346112
+SHA256 005f265b41e7357a7968d7cd651e6785a00e363799ef2d645a76695742899b51 gettext-1.10.0.gem 346112
