@@ -1,0 +1,23 @@
+# Copyright 1999-2007 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gettext/ruby-gettext-1.10.0.ebuild,v 1.1 2007/07/14 07:31:13 graaff Exp $
+
+inherit ruby gems
+
+MY_P=${P/ruby-/}
+DESCRIPTION="Ruby GetText Package is Native Language Support Library and Tools which modeled after GNU gettext package"
+HOMEPAGE="http://www.yotabanana.com/hiki/ruby-gettext.html"
+SRC_URI="http://gems.rubyforge.org/gems/${MY_P}.gem"
+
+KEYWORDS="~amd64 ~ia64 ~ppc ~sparc ~x86"
+IUSE=""
+USE_RUBY="ruby18"
+SLOT="0"
+LICENSE="Ruby"
+
+DEPEND="virtual/ruby
+	sys-devel/gettext
+	dev-ruby/rdtool
+	>=dev-ruby/racc-1.4.4"
+
+S="${WORKDIR}/${PN}-package-${PV}"
