@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/ruby-gettext
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gettext/ChangeLog,v 1.31 2007/04/14 06:18:57 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gettext/ChangeLog,v 1.32 2007/07/14 07:31:13 graaff Exp $
+
+*ruby-gettext-1.10.0 (14 Jul 2007)
+
+  14 Jul 2007; Hans de Graaff <graaff@gentoo.org>
+  +ruby-gettext-1.10.0.ebuild:
+  Version bump: significant performance improvement and better Rails support.
 
   14 Apr 2007; Hans de Graaff <graaff@gentoo.org>
   -ruby-gettext-0.8.0.ebuild:
